[package]
name = "mpc-primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core"] }
k256 = { version = "0.13", features = ["arithmetic", "ecdh"] }
modulo = "0.1.2"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.11.0"


[lib]
name = "mpc_primitives"
path = "src/lib.rs"

[[bin]]
name = "mpc-primitives"
path = "src/main.rs"

